--- a/signup.html
+++ b/signup.html
@@ -1,136 +1,166 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sign Up</title>
-  <link href="https://fonts.googleapis.com/css2?family=Segoe+UI:wght@400;600&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <title>Sign Up | Finance Point</title>
+  <!-- Firebase SDKs -->
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore-compat.js"></script>
   <style>
-    * { box-sizing: border-box; margin: 0; padding: 0; }
     body {
+      margin: 0;
+      padding: 0;
+      background: url('https://cdn.pixabay.com/animation/2023/06/08/07/28/07-28-55-726_512.gif') no-repeat center center fixed;
+      background-size: cover;
       font-family: 'Segoe UI', sans-serif;
-      background: #0d0d0d url('https://www.transparenttextures.com/patterns/stardust.png');
-      color: white;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
     }
-    .container {
-      background: #1a1a1a;
-      border: 2px solid gold;
-      border-radius: 10px;
-      padding: 30px 20px;
-      width: 100%;
+
+    .form-container {
       max-width: 400px;
-      position: relative;
+      margin: 100px auto;
+      padding: 30px;
+      background: rgba(255, 255, 255, 0.9);
+      border-radius: 12px;
+      box-shadow: 0 0 15px rgba(0,0,0,0.3);
     }
+
     h2 {
       text-align: center;
       margin-bottom: 20px;
-      color: gold;
     }
-    input[type="text"], input[type="email"], input[type="password"] {
+
+    input {
       width: 100%;
       padding: 12px;
       margin: 10px 0;
-      background: #0d0d0d;
-      border: 1px solid gold;
-      border-radius: 5px;
-      color: white;
+      border: 2px solid #333;
+      border-radius: 8px;
+      font-size: 15px;
     }
+
     button {
       width: 100%;
       padding: 12px;
-      background: gold;
-      color: black;
+      background: #007bff;
+      color: white;
       border: none;
-      font-weight: bold;
-      border-radius: 5px;
+      border-radius: 8px;
+      font-size: 16px;
       cursor: pointer;
+    }
+
+    .login-link {
+      text-align: center;
       margin-top: 10px;
     }
-    button:hover { background: #ffcc00; }
-    .message {
-      position: absolute;
-      top: -40px;
+
+    .login-link a {
+      color: #007bff;
+      text-decoration: none;
+    }
+
+    .popup {
+      position: fixed;
+      top: 20px;
       left: 50%;
       transform: translateX(-50%);
-      background: gold;
-      color: black;
-      padding: 10px;
-      border-radius: 5px;
-      font-size: 14px;
+      padding: 15px 25px;
+      background-color: #28a745;
+      color: white;
+      border-radius: 8px;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.2);
       display: none;
+      z-index: 9999;
+      animation: fade 0.5s ease-in-out;
+    }
+
+    .popup.error {
+      background-color: #dc3545;
+    }
+
+    @keyframes fade {
+      from { opacity: 0; top: 0; }
+      to { opacity: 1; top: 20px; }
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <div class="message" id="messageBox"></div>
-    <h2>Sign Up</h2>
-    <input type="text" id="fullName" placeholder="Full Name">
-    <input type="text" id="matricNumber" placeholder="Matric Number">
-    <input type="email" id="email" placeholder="Email">
-    <input type="password" id="password" placeholder="Password">
-    <button onclick="signUp()">Sign Up</button>
-  </div>  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-app-compat.js"></script>  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-auth-compat.js"></script>  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore-compat.js"></script>  <script>
-    const firebaseConfig = {
-      apiKey: "AIzaSyCH5H1FWEcHmQiCQhoc6GE8GhizqhTZoQc",
-      authDomain: "finsa-connect.firebaseapp.com",
-      projectId: "finsa-connect",
-      storageBucket: "finsa-connect.firebasestorage.app",
-      messagingSenderId: "126845965255",
-      appId: "1:126845965255:web:c82539297a8464873d7fe2"
-    };
-    firebase.initializeApp(firebaseConfig);
-    const auth = firebase.auth();
-    const db = firebase.firestore();
 
-    function showMessage(msg, color = 'black') {
-      const msgBox = document.getElementById("messageBox");
-      msgBox.innerText = msg;
-      msgBox.style.display = 'block';
-      msgBox.style.backgroundColor = color;
-      setTimeout(() => msgBox.style.display = 'none', 4000);
+<div class="form-container">
+  <h2>Sign Up</h2>
+  <input type="text" id="fullName" placeholder="Full Name" required>
+  <input type="text" id="matric" placeholder="Matric Number" required>
+  <input type="email" id="email" placeholder="Email" required>
+  <input type="password" id="password" placeholder="Password" required>
+  <button onclick="signUp()">Sign Up</button>
+  <div class="login-link">
+    Already have an account? <a href="login.html">Login</a>
+  </div>
+</div>
+
+<div id="popup" class="popup"></div>
+
+<script>
+  // ✅ Your Firebase config
+  const firebaseConfig = {
+    apiKey: "AIzaSyCH5H1FWEcHmQiCQhoc6GE8GhizqhTZoQc",
+    authDomain: "finsa-connect.firebaseapp.com",
+    projectId: "finsa-connect",
+    storageBucket: "finsa-connect.firebasestorage.app",
+    messagingSenderId: "126845965255",
+    appId: "1:126845965255:web:c82539297a8464873d7fe2"
+  };
+
+  // ✅ Initialize Firebase
+  firebase.initializeApp(firebaseConfig);
+  const auth = firebase.auth();
+  const db = firebase.firestore();
+
+  // ✅ Show popup notification
+  function showPopup(message, isError = false) {
+    const popup = document.getElementById('popup');
+    popup.textContent = message;
+    popup.className = isError ? 'popup error' : 'popup';
+    popup.style.display = 'block';
+    setTimeout(() => {
+      popup.style.display = 'none';
+    }, 4000);
+  }
+
+  // ✅ Sign-up function
+  function signUp() {
+    const name = document.getElementById("fullName").value.trim();
+    const matric = document.getElementById("matric").value.trim();
+    const email = document.getElementById("email").value.trim();
+    const password = document.getElementById("password").value;
+
+    if (!name || !matric || !email || !password) {
+      showPopup("All fields are required.", true);
+      return;
     }
 
-    function signUp() {
-      const fullName = document.getElementById("fullName").value;
-      const matric = document.getElementById("matricNumber").value;
-      const email = document.getElementById("email").value;
-      const password = document.getElementById("password").value;
-
-      if (!fullName || !matric || !email || !password) {
-        showMessage("Please fill in all fields", "red");
-        return;
-      }
-
-      auth.createUserWithEmailAndPassword(email, password)
-        .then(cred => {
-          return db.collection("users").doc(cred.user.uid).set({
-            fullName,
-            matricNumber: matric,
-            email
-          });
-        })
-        .then(() => {
-          showMessage("Account created successfully!", "green");
-          setTimeout(() => {
-            window.location.href = "login.html";
-          }, 2000);
-        })
-        .catch(error => {
-          if (error.code === 'auth/email-already-in-use') {
-            showMessage("Email already registered", "red");
-          } else if (error.code === 'auth/invalid-email') {
-            showMessage("Invalid email address", "red");
-          } else if (error.code === 'auth/weak-password') {
-            showMessage("Password should be at least 6 characters", "red");
-          } else {
-            showMessage("An error occurred. Try again", "red");
-          }
+    auth.createUserWithEmailAndPassword(email, password)
+      .then((userCredential) => {
+        const uid = userCredential.user.uid;
+        return db.collection("users").doc(uid).set({
+          fullName: name,
+          matricNumber: matric,
+          email: email,
+          createdAt: firebase.firestore.FieldValue.serverTimestamp()
         });
-    }
-  </script></body>
+      })
+      .then(() => {
+        showPopup(`Welcome ${name} to Finance Point 🚀`);
+        setTimeout(() => {
+          window.location.href = "dashboard.html";
+        }, 4000);
+      })
+      .catch((error) => {
+        showPopup(error.message, true);
+      });
+  }
+</script>
+
+</body>
 </html>
