--- a/signup.html
+++ b/signup.html
@@ -2,31 +2,43 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Sign Up | Finance Point</title>
+  <title>Sign Up</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
   <!-- Firebase SDKs -->
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore-compat.js"></script>
+
   <style>
+    /* Gold-themed animated background */
     body {
       margin: 0;
       padding: 0;
-      background: url('https://cdn.pixabay.com/animation/2023/06/08/07/28/07-28-55-726_512.gif') no-repeat center center fixed;
-      background-size: cover;
       font-family: 'Segoe UI', sans-serif;
+      background: radial-gradient(circle, #fff9e6 0%, #f5c518 100%);
+      animation: glow 10s ease-in-out infinite;
+    }
+
+    @keyframes glow {
+      0% { background: radial-gradient(circle, #fff9e6 0%, #f5c518 100%); }
+      50% { background: radial-gradient(circle, #fff3c0 0%, #ffd700 100%); }
+      100% { background: radial-gradient(circle, #fff9e6 0%, #f5c518 100%); }
     }
 
     .form-container {
-      max-width: 400px;
-      margin: 100px auto;
-      padding: 30px;
-      background: rgba(255, 255, 255, 0.9);
-      border-radius: 12px;
-      box-shadow: 0 0 15px rgba(0,0,0,0.3);
+      max-width: 95%;
+      width: 400px;
+      margin: 80px auto;
+      background: rgba(255, 255, 255, 0.95);
+      padding: 25px;
+      border-radius: 16px;
+      box-shadow: 0 0 15px rgba(0,0,0,0.15);
     }
 
     h2 {
       text-align: center;
+      color: #a97400;
       margin-bottom: 20px;
     }
 
@@ -34,30 +46,24 @@
       width: 100%;
       padding: 12px;
       margin: 10px 0;
-      border: 2px solid #333;
-      border-radius: 8px;
+      border: 2px solid #b57f00;
+      border-radius: 10px;
       font-size: 15px;
     }
 
     button {
       width: 100%;
       padding: 12px;
-      background: #007bff;
+      background: #b57f00;
       color: white;
       border: none;
-      border-radius: 8px;
+      border-radius: 10px;
       font-size: 16px;
       cursor: pointer;
     }
 
-    .login-link {
-      text-align: center;
-      margin-top: 10px;
-    }
-
-    .login-link a {
-      color: #007bff;
-      text-decoration: none;
+    button:hover {
+      background: #a66f00;
     }
 
     .popup {
@@ -65,14 +71,17 @@
       top: 20px;
       left: 50%;
       transform: translateX(-50%);
-      padding: 15px 25px;
-      background-color: #28a745;
+      padding: 14px 25px;
       color: white;
       border-radius: 8px;
-      box-shadow: 0 2px 10px rgba(0,0,0,0.2);
+      font-weight: bold;
       display: none;
       z-index: 9999;
-      animation: fade 0.5s ease-in-out;
+      animation: fade 0.4s ease-in-out;
+    }
+
+    .popup.success {
+      background-color: #28a745;
     }
 
     .popup.error {
@@ -83,6 +92,17 @@
       from { opacity: 0; top: 0; }
       to { opacity: 1; top: 20px; }
     }
+
+    @media (max-width: 500px) {
+      .form-container {
+        margin: 50px 10px;
+        padding: 20px;
+      }
+
+      input, button {
+        font-size: 14px;
+      }
+    }
   </style>
 </head>
 <body>
@@ -91,18 +111,14 @@
   <h2>Sign Up</h2>
   <input type="text" id="fullName" placeholder="Full Name" required>
   <input type="text" id="matric" placeholder="Matric Number" required>
-  <input type="email" id="email" placeholder="Email" required>
+  <input type="email" id="email" placeholder="Email Address" required>
   <input type="password" id="password" placeholder="Password" required>
-  <button onclick="signUp()">Sign Up</button>
-  <div class="login-link">
-    Already have an account? <a href="login.html">Login</a>
-  </div>
+  <button onclick="signUp()">Create Account</button>
 </div>
 
 <div id="popup" class="popup"></div>
 
 <script>
-  // ✅ Your Firebase config
   const firebaseConfig = {
     apiKey: "AIzaSyCH5H1FWEcHmQiCQhoc6GE8GhizqhTZoQc",
     authDomain: "finsa-connect.firebaseapp.com",
@@ -112,23 +128,20 @@
     appId: "1:126845965255:web:c82539297a8464873d7fe2"
   };
 
-  // ✅ Initialize Firebase
   firebase.initializeApp(firebaseConfig);
   const auth = firebase.auth();
   const db = firebase.firestore();
 
-  // ✅ Show popup notification
-  function showPopup(message, isError = false) {
+  function showPopup(message, type = 'success') {
     const popup = document.getElementById('popup');
+    popup.className = `popup ${type}`;
     popup.textContent = message;
-    popup.className = isError ? 'popup error' : 'popup';
     popup.style.display = 'block';
     setTimeout(() => {
       popup.style.display = 'none';
     }, 4000);
   }
 
-  // ✅ Sign-up function
   function signUp() {
     const name = document.getElementById("fullName").value.trim();
     const matric = document.getElementById("matric").value.trim();
@@ -136,7 +149,7 @@
     const password = document.getElementById("password").value;
 
     if (!name || !matric || !email || !password) {
-      showPopup("All fields are required.", true);
+      showPopup("Please fill in all fields.", "error");
       return;
     }
 
@@ -151,13 +164,13 @@
         });
       })
       .then(() => {
-        showPopup(`Welcome ${name} to Finance Point 🚀`);
+        showPopup(`Sign up successful!`, "success");
         setTimeout(() => {
           window.location.href = "dashboard.html";
         }, 4000);
       })
       .catch((error) => {
-        showPopup(error.message, true);
+        showPopup(error.message, "error");
       });
   }
 </script>
