--- a/login.html
+++ b/login.html
@@ -1,175 +1,255 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Sign In</title>
-  <link href="https://fonts.googleapis.com/css2?family=Segoe+UI:wght@400;600&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+  <meta charset="UTF-8">
+  <title>Login</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- Firebase SDKs -->
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth-compat.js"></script>
+
+  <!-- Particles JS -->
+  <script src="https://cdn.jsdelivr.net/npm/tsparticles@2/tsparticles.bundle.min.js"></script>
+
   <style>
-    * { box-sizing: border-box; margin: 0; padding: 0; }
-    body {
-      font-family: 'Segoe UI', sans-serif;
+    html, body {
+      margin: 0;
+      padding: 0;
+      height: 100%;
       background: #0d0d0d;
-      color: #fff;
-      min-height: 100vh;
+      font-family: 'Segoe UI', sans-serif;
+      color: white;
+    }
+
+    #tsparticles {
+      position: fixed;
+      width: 100%;
+      height: 100%;
+      z-index: -1;
+    }
+
+    .wrapper {
       display: flex;
       align-items: center;
       justify-content: center;
-      position: relative;
-      overflow: hidden;
+      height: 100%;
+      padding: 20px;
     }
+
     .form-container {
-      background: rgba(17, 17, 17, 0.9);
-      padding: 40px 30px;
-      border-radius: 10px;
-      width: 100%;
       max-width: 400px;
-      border: 1px solid gold;
-      z-index: 2;
+      width: 100%;
+      padding: 30px;
+      background: rgba(20, 20, 20, 0.4);
+      backdrop-filter: blur(12px);
+      border-radius: 16px;
+      box-shadow: 0 0 30px gold, 0 0 8px rgba(255, 215, 0, 0.2);
     }
+
     h2 {
       text-align: center;
-      margin-bottom: 20px;
       color: gold;
+      margin-bottom: 20px;
     }
+
     input {
       width: 100%;
-      padding: 12px;
-      margin-bottom: 15px;
-      border-radius: 5px;
-      border: 1px solid gold;
-      background: #1a1a1a;
-      color: #fff;
+      padding: 14px;
+      margin: 10px 0;
+      background: rgba(17,17,17,0.9);
+      border: 2px solid gold;
+      border-radius: 10px;
+      color: white;
+      font-size: 16px;
     }
+
+    input::placeholder {
+      color: #ccc;
+    }
+
     button {
       width: 100%;
-      padding: 12px;
+      padding: 14px;
+      margin-top: 10px;
       background: gold;
-      border: none;
-      border-radius: 5px;
+      color: #111;
       font-weight: bold;
+      font-size: 17px;
+      border: none;
+      border-radius: 10px;
       cursor: pointer;
-      color: #000;
     }
+
     button:hover {
-      background: #ffd700;
+      background: #e6c200;
     }
-    .message {
+
+    .links {
       text-align: center;
       margin-top: 15px;
-      font-size: 14px;
-      color: #f00;
     }
+
+    .links a {
+      color: gold;
+      font-weight: bold;
+      text-decoration: none;
+      display: block;
+      margin: 6px 0;
+    }
+
     .popup {
       position: fixed;
       top: 20px;
       left: 50%;
       transform: translateX(-50%);
-      background: #333;
-      color: white;
-      padding: 12px 25px;
-      border-radius: 6px;
-      z-index: 9999;
+      padding: 12px 20px;
+      border-radius: 8px;
+      font-weight: bold;
+      z-index: 999;
       display: none;
+      color: white;
     }
-    .forgot {
-      text-align: right;
-      font-size: 14px;
-      margin-bottom: 15px;
+
+    .popup.success {
+      background-color: #28a745;
     }
-    .forgot a {
-      color: gold;
-      text-decoration: none;
+
+    .popup.error {
+      background-color: #dc3545;
     }
-    .switch {
-      text-align: center;
-      margin-top: 20px;
-      font-size: 14px;
-    }
-    .switch a {
-      color: gold;
-      text-decoration: none;
-    }
-    .bg-animated {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      z-index: 1;
-      background: url('https://www.transparenttextures.com/patterns/stardust.png') repeat;
-      opacity: 0.08;
+
+    @media (max-width: 480px) {
+      .form-container {
+        padding: 20px;
+      }
+
+      input, button {
+        font-size: 15px;
+      }
     }
   </style>
 </head>
 <body>
-  <div class="bg-animated"></div>
+
+<!-- Particle Background -->
+<div id="tsparticles"></div>
+
+<div class="wrapper">
   <div class="form-container">
-    <h2>Sign In</h2>
-    <input type="email" id="email" placeholder="Email" />
-    <input type="password" id="password" placeholder="Password" />
-    <div class="forgot"><a href="#" onclick="resetPassword()">Forgot Password?</a></div>
-    <button onclick="login()">Sign In</button>
-    <div class="switch">Don't have an account? <a href="signup.html">Sign Up</a></div>
-    <div id="message" class="message"></div>
+    <h2>Login</h2>
+    <input type="email" id="email" placeholder="Email Address" required>
+    <input type="password" id="password" placeholder="Password" required>
+    <button onclick="login()">Login</button>
+
+    <div class="links">
+      <a href="#" onclick="resetPassword()">Forgot Password?</a>
+      <a href="signup.html">Don't have an account? Sign up here</a>
+    </div>
   </div>
-  <div class="popup" id="popup"></div>  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-app-compat.js"></script>  <script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-auth-compat.js"></script>  <script>
-    const firebaseConfig = {
-      apiKey: "AIzaSyCH5H1FWEcHmQiCQhoc6GE8GhizqhTZoQc",
-      authDomain: "finsa-connect.firebaseapp.com",
-      projectId: "finsa-connect",
-      storageBucket: "finsa-connect.firebasestorage.app",
-      messagingSenderId: "126845965255",
-      appId: "1:126845965255:web:c82539297a8464873d7fe2"
-    };
-    firebase.initializeApp(firebaseConfig);
-    const auth = firebase.auth();
+</div>
 
-    function login() {
-      const email = document.getElementById('email').value.trim();
-      const password = document.getElementById('password').value.trim();
-      auth.signInWithEmailAndPassword(email, password)
-        .then(() => {
-          showPopup("Login successful! Redirecting...");
-          setTimeout(() => {
-            window.location.href = "dashboard.html";
-          }, 2000);
-        })
-        .catch(error => {
-          document.getElementById("message").textContent = getFriendlyErrorMessage(error.code);
-        });
+<div id="popup" class="popup"></div>
+
+<script>
+  const firebaseConfig = {
+    apiKey: "AIzaSyCH5H1FWEcHmQiCQhoc6GE8GhizqhTZoQc",
+    authDomain: "finsa-connect.firebaseapp.com",
+    projectId: "finsa-connect",
+    storageBucket: "finsa-connect.firebasestorage.app",
+    messagingSenderId: "126845965255",
+    appId: "1:126845965255:web:c82539297a8464873d7fe2"
+  };
+
+  firebase.initializeApp(firebaseConfig);
+  const auth = firebase.auth();
+
+  function showPopup(message, type = 'success') {
+    const popup = document.getElementById('popup');
+    popup.textContent = message;
+    popup.className = `popup ${type}`;
+    popup.style.display = 'block';
+    setTimeout(() => {
+      popup.style.display = 'none';
+    }, 4000);
+  }
+
+  function login() {
+    const email = document.getElementById("email").value.trim();
+    const password = document.getElementById("password").value;
+
+    if (!email || !password) {
+      showPopup("Please enter both email and password.", "error");
+      return;
     }
 
-    function resetPassword() {
-      const email = document.getElementById('email').value.trim();
-      if (!email) {
-        showPopup("Enter your email first.");
-        return;
+    auth.signInWithEmailAndPassword(email, password)
+      .then(() => {
+        showPopup("Login successful!", "success");
+        setTimeout(() => {
+          window.location.href = "dashboard.html";
+        }, 4000);
+      })
+      .catch((error) => {
+        showPopup(error.message, "error");
+      });
+  }
+
+  function resetPassword() {
+    const email = document.getElementById("email").value.trim();
+    if (!email) {
+      showPopup("Enter your email to reset password.", "error");
+      return;
+    }
+    auth.sendPasswordResetEmail(email)
+      .then(() => {
+        showPopup("Reset link sent to your email.", "success");
+      })
+      .catch((error) => {
+        showPopup(error.message, "error");
+      });
+  }
+
+  // Particles background
+  tsParticles.load("tsparticles", {
+    background: { color: { value: "#0d0d0d" } },
+    fpsLimit: 60,
+    interactivity: {
+      events: {
+        onHover: { enable: true, mode: "repulse" },
+        resize: true
+      },
+      modes: {
+        repulse: { distance: 60, duration: 0.4 }
       }
-      auth.sendPasswordResetEmail(email)
-        .then(() => showPopup("Reset link sent!"))
-        .catch(error => showPopup(getFriendlyErrorMessage(error.code)));
-    }
+    },
+    particles: {
+      color: { value: "#FFD700" },
+      links: {
+        color: "#FFD700",
+        distance: 120,
+        enable: true,
+        opacity: 0.3,
+        width: 1
+      },
+      move: {
+        enable: true,
+        speed: 0.6,
+        direction: "none",
+        random: true,
+        outModes: "bounce"
+      },
+      number: {
+        density: { enable: true, area: 700 },
+        value: 45
+      },
+      opacity: { value: 0.4 },
+      shape: { type: "circle" },
+      size: { value: { min: 1, max: 3 } }
+    },
+    detectRetina: true
+  });
+</script>
 
-    function showPopup(text) {
-      const popup = document.getElementById("popup");
-      popup.textContent = text;
-      popup.style.display = "block";
-      setTimeout(() => {
-        popup.style.display = "none";
-      }, 4000);
-    }
-
-    function getFriendlyErrorMessage(code) {
-      switch (code) {
-        case "auth/user-not-found": return "Email not found.";
-        case "auth/wrong-password":
-        case "auth/internal-error": return "Incorrect password.";
-        case "auth/invalid-email": return "Invalid email address.";
-        case "auth/network-request-failed": return "No internet connection.";
-        case "auth/too-many-requests": return "Too many attempts. Try again later.";
-        default: return "An error occurred. Try again.";
-      }
-    }
-  </script></body>
+</body>
 </html>
