--- a/feedback.html
+++ b/feedback.html
@@ -1,52 +1,1 @@
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>FINHUB</title>
-  <link href="https://fonts.googleapis.com/css2?family=Segoe+UI:wght@400;600&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <header style="background:#220033;padding:10px;text-align:center;">
-    <h1 style="color:#b37cd5;">FINHUB</h1>
-  </header>
-
-  <nav style="background:#1a0033;display:flex;justify-content:space-around;padding:10px 0;">
-    <a href="index.html">Home</a>
-    <a href="announcements.html">Announcements</a>
-    <a href="events.html">Events</a>
-    <a href="downloads.html">Downloads</a>
-    <a href="ads.html">Ads</a>
-  </nav>
-
-  <main style="padding:20px;">
-    <h2>Feedback Page</h2>
-    <p>Your portal to Finance Department updates, materials, and opportunities.</p>
-  </main>
-
-  <footer style="background:#220033;text-align:center;padding:10px;margin-top:40px;color:#aaa;">
-    Contact PRO for Ads: 08142452729 | AAUA Finance Dept. © 2025
-  </footer>
-
-  
-<script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-app-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-auth-compat.js"></script>
-<script src="https://www.gstatic.com/firebasejs/10.12.0/firebase-firestore-compat.js"></script>
-<script>
-  const firebaseConfig = {
-    apiKey: "AIzaSyCH5H1FWEcHmQiCQhoc6GE8GhizqhTZoQc",
-    authDomain: "finsa-connect.firebaseapp.com",
-    projectId: "finsa-connect",
-    storageBucket: "finsa-connect.firebasestorage.app",
-    messagingSenderId: "126845965255",
-    appId: "1:126845965255:web:c82539297a8464873d7fe2"
-  };
-  firebase.initializeApp(firebaseConfig);
-  const auth = firebase.auth();
-  const db = firebase.firestore();
-</script>
-
-</body>
-</html>
+<!DOCTYPE html><html><head><title>Feedback</title></head><body><h1>Send Feedback</h1></body></html>
