--- a/login.html
+++ b/login.html
@@ -1,285 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Login</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <!-- Firebase SDKs -->
-  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth-compat.js"></script>
-
-  <!-- Particles JS -->
-  <script src="https://cdn.jsdelivr.net/npm/tsparticles@2/tsparticles.bundle.min.js"></script>
-
-  <style>
-    *, *::before, *::after {
-      box-sizing: border-box;
-    }
-
-    html, body {
-      margin: 0;
-      padding: 0;
-      height: 100%;
-      background: #0d0d0d;
-      font-family: 'Segoe UI', sans-serif;
-      color: white;
-    }
-
-    #tsparticles {
-      position: fixed;
-      width: 100%;
-      height: 100%;
-      z-index: -1;
-    }
-
-    .wrapper {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      height: 100%;
-      padding: 20px;
-    }
-
-    .form-container {
-      max-width: 400px;
-      width: 100%;
-      padding: 25px;
-      background: rgba(20, 20, 20, 0.5);
-      backdrop-filter: blur(10px);
-      border-radius: 14px;
-      box-shadow: 0 0 12px gold;
-      animation: slideDown 0.7s ease-out;
-    }
-
-    @keyframes slideDown {
-      from {
-        opacity: 0;
-        transform: translateY(-50px);
-      }
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
-    }
-
-    h2 {
-      text-align: center;
-      color: gold;
-      margin-bottom: 20px;
-    }
-
-    input {
-      width: 100%;
-      padding: 10px;
-      margin: 8px 0;
-      background: rgba(17,17,17,0.95);
-      border: 2px solid gold;
-      border-radius: 8px;
-      color: white;
-      font-size: 15px;
-    }
-
-    input::placeholder {
-      color: #bbb;
-    }
-
-    .forgot {
-      text-align: right;
-      margin-top: 6px;
-      font-size: 13px;
-    }
-
-    .forgot a {
-      color: gold;
-      text-decoration: none;
-      font-weight: bold;
-    }
-
-    button {
-      width: 100%;
-      padding: 12px;
-      margin-top: 15px;
-      background: gold;
-      color: #111;
-      font-weight: bold;
-      font-size: 16px;
-      border: none;
-      border-radius: 8px;
-      cursor: pointer;
-    }
-
-    button:hover {
-      background: #e6c200;
-    }
-
-    .links {
-      text-align: center;
-      margin-top: 15px;
-      font-size: 14px;
-    }
-
-    .links a {
-      color: gold;
-      font-weight: bold;
-      text-decoration: none;
-    }
-
-    .popup {
-      position: fixed;
-      top: 20px;
-      left: 50%;
-      transform: translateX(-50%);
-      padding: 12px 20px;
-      border-radius: 8px;
-      font-weight: bold;
-      z-index: 999;
-      display: none;
-      color: white;
-    }
-
-    .popup.success {
-      background-color: #28a745;
-    }
-
-    .popup.error {
-      background-color: #dc3545;
-    }
-
-    @media (max-width: 480px) {
-      .form-container {
-        padding: 20px;
-      }
-
-      input, button {
-        font-size: 15px;
-      }
-    }
-  </style>
-</head>
-<body>
-
-<!-- Particle Background -->
-<div id="tsparticles"></div>
-
-<div class="wrapper">
-  <div class="form-container">
-    <h2>Login</h2>
-    <input type="email" id="email" placeholder="Email Address" required>
-    <input type="password" id="password" placeholder="Password" required>
-
-    <div class="forgot">
-      <a href="#" onclick="resetPassword()">Forgot Password?</a>
-    </div>
-
-    <button onclick="login()">Sign In</button>
-
-    <div class="links">
-      New here? <a href="signup.html">Create Account</a>
-    </div>
-  </div>
-</div>
-
-<div id="popup" class="popup"></div>
-
-<script>
-  const firebaseConfig = {
-    apiKey: "AIzaSyCH5H1FWEcHmQiCQhoc6GE8GhizqhTZoQc",
-    authDomain: "finsa-connect.firebaseapp.com",
-    projectId: "finsa-connect",
-    storageBucket: "finsa-connect.firebasestorage.app",
-    messagingSenderId: "126845965255",
-    appId: "1:126845965255:web:c82539297a8464873d7fe2"
-  };
-
-  firebase.initializeApp(firebaseConfig);
-  const auth = firebase.auth();
-
-  function showPopup(message, type = 'success') {
-    const popup = document.getElementById('popup');
-    popup.textContent = message;
-    popup.className = `popup ${type}`;
-    popup.style.display = 'block';
-    setTimeout(() => {
-      popup.style.display = 'none';
-    }, 4000);
-  }
-
-  function login() {
-    const email = document.getElementById("email").value.trim();
-    const password = document.getElementById("password").value;
-
-    if (!email || !password) {
-      showPopup("Please enter both email and password.", "error");
-      return;
-    }
-
-    auth.signInWithEmailAndPassword(email, password)
-      .then(() => {
-        showPopup("Login successful!", "success");
-        setTimeout(() => {
-          window.location.href = "dashboard.html";
-        }, 4000);
-      })
-      .catch((error) => {
-        showPopup(error.message, "error");
-      });
-  }
-
-  function resetPassword() {
-    const email = document.getElementById("email").value.trim();
-    if (!email) {
-      showPopup("Enter your email to reset password.", "error");
-      return;
-    }
-    auth.sendPasswordResetEmail(email)
-      .then(() => {
-        showPopup("Reset link sent to your email.", "success");
-      })
-      .catch((error) => {
-        showPopup(error.message, "error");
-      });
-  }
-
-  tsParticles.load("tsparticles", {
-    background: { color: { value: "#0d0d0d" } },
-    fpsLimit: 60,
-    interactivity: {
-      events: {
-        onHover: { enable: true, mode: "repulse" },
-        resize: true
-      },
-      modes: {
-        repulse: { distance: 60, duration: 0.4 }
-      }
-    },
-    particles: {
-      color: { value: "#FFD700" },
-      links: {
-        color: "#FFD700",
-        distance: 120,
-        enable: true,
-        opacity: 0.3,
-        width: 1
-      },
-      move: {
-        enable: true,
-        speed: 0.6,
-        direction: "none",
-        random: true,
-        outModes: "bounce"
-      },
-      number: {
-        density: { enable: true, area: 700 },
-        value: 45
-      },
-      opacity: { value: 0.4 },
-      shape: { type: "circle" },
-      size: { value: { min: 1, max: 3 } }
-    },
-    detectRetina: true
-  });
-</script>
-
-</body>
-</html>
+<!DOCTYPE html><html><head><title>Login</title></head><body><h1>Login Page</h1></body></html>
