--- a/signup.html
+++ b/signup.html
@@ -1,263 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Sign Up</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <!-- Firebase SDKs -->
-  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-auth-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore-compat.js"></script>
-
-  <!-- Particles JS -->
-  <script src="https://cdn.jsdelivr.net/npm/tsparticles@2/tsparticles.bundle.min.js"></script>
-
-  <style>
-    * {
-      box-sizing: border-box;
-    }
-
-    html, body {
-      margin: 0;
-      padding: 0;
-      height: 100%;
-      font-family: 'Segoe UI', sans-serif;
-      background-color: #0d0d0d;
-      color: white;
-    }
-
-    #tsparticles {
-      position: fixed;
-      width: 100%;
-      height: 100%;
-      z-index: -1;
-    }
-
-    .wrapper {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      height: 100%;
-      padding: 20px;
-    }
-
-    .form-container {
-      width: 100%;
-      max-width: 420px;
-      padding: 30px;
-      background: rgba(20, 20, 20, 0.4); /* More transparent */
-      backdrop-filter: blur(12px);
-      border-radius: 16px;
-      box-shadow: 0 0 30px gold, 0 0 8px rgba(255, 215, 0, 0.2);
-      animation: fadeIn 1s ease-in-out;
-    }
-
-    @keyframes fadeIn {
-      from { opacity: 0; transform: translateY(-20px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-
-    h2 {
-      text-align: center;
-      color: gold;
-      margin-bottom: 20px;
-    }
-
-    input {
-      width: 100%;
-      padding: 14px;
-      margin: 10px 0;
-      background: rgba(17,17,17,0.9);
-      color: white;
-      border: 2px solid gold;
-      border-radius: 10px;
-      font-size: 16px;
-    }
-
-    input::placeholder {
-      color: #ccc;
-    }
-
-    button {
-      width: 100%;
-      padding: 14px;
-      margin-top: 10px;
-      background: gold;
-      color: #111;
-      border: none;
-      border-radius: 10px;
-      font-size: 17px;
-      font-weight: bold;
-      cursor: pointer;
-    }
-
-    button:hover {
-      background: #e6c200;
-    }
-
-    .popup {
-      position: fixed;
-      top: 20px;
-      left: 50%;
-      transform: translateX(-50%);
-      padding: 12px 20px;
-      border-radius: 8px;
-      font-weight: bold;
-      z-index: 999;
-      display: none;
-      color: white;
-    }
-
-    .popup.success {
-      background-color: #28a745;
-    }
-
-    .popup.error {
-      background-color: #dc3545;
-    }
-
-    .login-link {
-      text-align: center;
-      margin-top: 15px;
-    }
-
-    .login-link a {
-      color: gold;
-      font-weight: bold;
-      text-decoration: none;
-    }
-
-    @media (max-width: 480px) {
-      .form-container {
-        padding: 20px;
-      }
-
-      input, button {
-        font-size: 15px;
-      }
-    }
-  </style>
-</head>
-<body>
-
-<!-- Particle Background -->
-<div id="tsparticles"></div>
-
-<div class="wrapper">
-  <div class="form-container">
-    <h2>Sign Up</h2>
-    <input type="text" id="fullName" placeholder="Full Name" required>
-    <input type="text" id="matric" placeholder="Matric Number" required>
-    <input type="email" id="email" placeholder="Email Address" required>
-    <input type="password" id="password" placeholder="Password" required>
-    <button onclick="signUp()">Create Account</button>
-
-    <div class="login-link">
-      <span>Already have an account?</span>
-      <a href="login.html">Login here</a>
-    </div>
-  </div>
-</div>
-
-<div id="popup" class="popup"></div>
-
-<script>
-  const firebaseConfig = {
-    apiKey: "AIzaSyCH5H1FWEcHmQiCQhoc6GE8GhizqhTZoQc",
-    authDomain: "finsa-connect.firebaseapp.com",
-    projectId: "finsa-connect",
-    storageBucket: "finsa-connect.firebasestorage.app",
-    messagingSenderId: "126845965255",
-    appId: "1:126845965255:web:c82539297a8464873d7fe2"
-  };
-
-  firebase.initializeApp(firebaseConfig);
-  const auth = firebase.auth();
-  const db = firebase.firestore();
-
-  function showPopup(message, type = 'success') {
-    const popup = document.getElementById('popup');
-    popup.textContent = message;
-    popup.className = `popup ${type}`;
-    popup.style.display = 'block';
-    setTimeout(() => {
-      popup.style.display = 'none';
-    }, 4000);
-  }
-
-  function signUp() {
-    const name = document.getElementById("fullName").value.trim();
-    const matric = document.getElementById("matric").value.trim();
-    const email = document.getElementById("email").value.trim();
-    const password = document.getElementById("password").value;
-
-    if (!name || !matric || !email || !password) {
-      showPopup("Please fill in all fields.", "error");
-      return;
-    }
-
-    auth.createUserWithEmailAndPassword(email, password)
-      .then((userCredential) => {
-        const uid = userCredential.user.uid;
-        return db.collection("users").doc(uid).set({
-          fullName: name,
-          matricNumber: matric,
-          email: email,
-          createdAt: firebase.firestore.FieldValue.serverTimestamp()
-        });
-      })
-      .then(() => {
-        showPopup("Sign up successful!", "success");
-        setTimeout(() => {
-          window.location.href = "dashboard.html";
-        }, 4000);
-      })
-      .catch((error) => {
-        showPopup(error.message, "error");
-      });
-  }
-
-  // Gold particle background
-  tsParticles.load("tsparticles", {
-    background: { color: { value: "#0d0d0d" } },
-    fpsLimit: 60,
-    interactivity: {
-      events: {
-        onHover: { enable: true, mode: "repulse" },
-        resize: true
-      },
-      modes: {
-        repulse: { distance: 60, duration: 0.4 }
-      }
-    },
-    particles: {
-      color: { value: "#FFD700" },
-      links: {
-        color: "#FFD700",
-        distance: 120,
-        enable: true,
-        opacity: 0.3,
-        width: 1
-      },
-      move: {
-        enable: true,
-        speed: 0.6,
-        direction: "none",
-        random: true,
-        outModes: "bounce"
-      },
-      number: {
-        density: { enable: true, area: 700 },
-        value: 45
-      },
-      opacity: { value: 0.4 },
-      shape: { type: "circle" },
-      size: { value: { min: 1, max: 3 } }
-    },
-    detectRetina: true
-  });
-</script>
-
-</body>
-</html>
+<!DOCTYPE html><html><head><title>Sign Up</title></head><body><h1>Sign Up Page</h1></body></html>
