--- a/login.html
+++ b/login.html
@@ -70,6 +70,18 @@
       margin-top: 5px;
     }
 
+    .forgot {
+      text-align: right;
+      margin-top: -5px;
+      margin-bottom: 10px;
+    }
+
+    .forgot a {
+      font-size: 0.85rem;
+      color: gold;
+      text-decoration: none;
+    }
+
     .popup {
       position: fixed;
       top: 10px;
@@ -89,10 +101,13 @@
   <h2>Login</h2>
   <input type="email" id="email" placeholder="Email" required />
   <input type="password" id="password" placeholder="Password" required />
-  <div class="links">
+  
+  <div class="forgot">
     <a href="#" onclick="resetPassword()">Forgot Password?</a>
   </div>
+  
   <button onclick="login()">Sign In</button>
+
   <div class="links">
     <a href="signup.html">New here? Create account</a>
   </div>
@@ -102,11 +117,9 @@
 
 <!-- Firebase SDKs -->
 <script type="module">
-  // Import the functions from Firebase
   import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
   import { getAuth, signInWithEmailAndPassword, sendPasswordResetEmail } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
 
-  // Your Firebase configuration
   const firebaseConfig = {
     apiKey: "AIzaSyCH5H1FWEcHmQiCQhoc6GE8GhizqhTZoQc",
     authDomain: "finsa-connect.firebaseapp.com",
@@ -116,7 +129,6 @@
     appId: "1:126845965255:web:c82539297a8464873d7fe2"
   };
 
-  // Initialize Firebase
   const app = initializeApp(firebaseConfig);
   const auth = getAuth(app);
 
